<resources>
    <string name="app_name">AnimalGallery</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="image_title">Image Title</string>
    <string name="share">Share</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="image_description">Image Description</string>
    <string name="image_provided_by_unsplash">© Image provided by Unsplash</string>
    <string name="app_logo">App Logo</string>
    <string name="slogan">Login to personalize your own collection</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="log_out">Log out</string>
    <string name="related_images">You may also like:</string>
    <string name="username">Username</string>
    <string name="icon">icon</string>
    <string name="user_profile">User Profile</string>
    <string name="liked_images">Liked images</string>
    <string name="my_collections">My collections</string>
    <string name="hello_username">Welcome to Worldwild!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="loading_user_picture">Loading User Picture…</string>
    <string name="loading">Loading</string>
    <string name="date_of_birth">Date of birth (dd/mm/yyyy)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="instruction">Please enter your registered email here,
        we will send you a reset password link</string>
    <string name="sent_password_reset_link">Sent password reset link</string>
    <string name="upload_your_profile_pictures_here">Upload your profile pictures here</string>
    <string name="choose_pictures">Choose pictures</string>
    <string name="upload_picture">Upload picture</string>
    <string name="edit_profile">Edit profile</string>
    <string name="looking_for_something_else">Looking for something else?</string>
    <string name="change_password">Change password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_your_profile_information_here">Edit your profile information here</string>
    <string name="enter_your_password_to_authenticate">First, please enter your password</string>
    <string name="update_profile">Update profile</string>
    <string name="change_email">Change Email</string>
    <string name="authenticate">Authenticate</string>
    <string name="instruction_change_email">Your password has not been authenticated</string>
    <string name="your_old_email_address">Your old email address</string>
    <string name="your_current_email_address">Your current email address:</string>
    <string name="your_new_email_address">Your new email address:</string>
    <string name="enter_your_new_email_address">Enter your new email address</string>
    <string name="update_email">Update email</string>
    <string name="update_password">Update password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="your_new_password">Your new password:</string>
    <string name="images_you_ve_liked">Images you\'ve liked</string>
    <string name="customize_your_collections_here">Customize your collections here</string>
    <string name="create_collection">Create Collection</string>
    <string name="collection_name">Collection Name</string>
    <string name="add_to_collection">Add to collection</string>
</resources>