<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.AnimalDetail"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/animalDetailImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"
            android:src="@drawable/ic_baseline_image_24"
            android:background="@color/black"
            />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:columnCount="3"
                android:rowCount="1"
                android:layout_alignParentBottom="true"
                >
                <ImageView
                    android:id="@+id/shareButton"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"
                    android:src="@drawable/ic_baseline_share_24"
                    android:contentDescription="@string/home"/>
                <ImageView
                    android:id="@+id/downloadButton"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"
                    android:src="@drawable/baselineic_ic_file_download_24"
                    android:contentDescription="@string/search"/>
                <ImageView
                    android:id="@+id/addToFavoriteButton"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1"
                    android:src="@drawable/ic_baseline_favorite_24"
                    android:contentDescription="@string/favorite"/>
            </GridLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/imageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/acme"
            android:text="@string/image_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imageDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/image_description"
            android:textSize="20sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToCollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/lightGray"
            android:text="@string/add_to_collection"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/related_images"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/image_provided_by_unsplash"
            />

    </LinearLayout>
</ScrollView>