<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FavoriteListActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        app:cardElevation="13dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/images_you_ve_liked"
        android:textSize="30sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:columnCount="3"
        android:rowCount="1"
        android:background="#f1f1f1"
        >
        <ImageView
            android:id="@+id/home"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_baseline_home_24"
            android:background="@color/selectedNavigationItem"
            android:contentDescription="@string/home"/>
        <ImageView
            android:id="@+id/searchBtn"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/search"/>
        <ImageView
            android:id="@+id/userManagement"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:src="@drawable/ic_baseline_user_24"
            android:contentDescription="@string/favorite"/>
    </GridLayout>

</LinearLayout>