<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo2" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:background="@color/selectedNavigationItem"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toStartOf="@+id/createNewCollection"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/createNewCollection"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/create_new_collection"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="#f1f1f1"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/selectedNavigationItem"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_baseline_home_24" />

        <ImageView
            android:id="@+id/searchBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_baseline_search_24" />

        <ImageView
            android:id="@+id/userManagement"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_baseline_manage_accounts_24" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>