<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UploadProfilePicActivity">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_logo"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/upload_your_profile_pictures_here"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChoosePic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/lightGray"
        android:text="@string/choose_pictures"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/intruction"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/intruction"
        app:layout_constraintTop_toBottomOf="@+id/intruction" />

    <ImageView
        android:id="@+id/picPreview"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/btnChoosePic"
        app:layout_constraintStart_toStartOf="@+id/btnChoosePic"
        app:layout_constraintTop_toBottomOf="@+id/btnChoosePic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadPic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/lightBlue"
        android:text="@string/upload_picture"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/picPreview"
        app:layout_constraintStart_toStartOf="@+id/picPreview"
        app:layout_constraintTop_toBottomOf="@+id/picPreview" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>